--- a/WowArmory/Views/Shared/_Layout.cshtml
+++ b/WowArmory/Views/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <li>
+                            <a asp-controller="Data" asp-action="GetData">Items</a>
                         </li>
                     </ul>
                 </div>
