--- a/WowArmory/Views/Shared/_Layout.cshtml
+++ b/WowArmory/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li>
-                            <a asp-controller="Items" asp-action="GetItems">Items</a>
+                            <a asp-controller="Items" asp-action="Items">Items</a>
                         </li>
                     </ul>
                 </div>
