--- a/WowArmory/Views/Shared/_Layout.cshtml
+++ b/WowArmory/Views/Shared/_Layout.cshtml
@@ -18,8 +18,11 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li>
-                            <a asp-controller="Items" asp-action="Items">Items</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Items">Items</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Zones" asp-action="Index">Zones</a>
                         </li>
                     </ul>
                 </div>
