--- a/WowArmory/Views/Shared/_Layout.cshtml
+++ b/WowArmory/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Zones" asp-action="Index">Zones</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Quests" asp-action="Index">Quests</a>
+                        </li>
                     </ul>
                 </div>
             </div>
