--- a/WowArmory/Views/Zones/Zone.cshtml
+++ b/WowArmory/Views/Zones/Zone.cshtml
@@ -5,7 +5,7 @@
     string imgFormat = ".jpg";
 }
 
-<h1>@ViewBag.Name</h1>
+<h1>@ViewBag.Name</h1> <span>Level: @Model.Level.Level1-@Model.Level.Level2</span>
 <h4>@Html.DisplayFor(model => model.Category)</h4>
 <h4>@Html.DisplayFor(model => model.Territory)</h4>
 <img src="~/Maps/@Model.Name@imgFormat" />
