Add PageHelper prototype

--- a/WowArmory/Views/Items/Items.cshtml
+++ b/WowArmory/Views/Items/Items.cshtml
@@ -56,7 +56,7 @@
         }
         @if (@ViewBag.NumberOfItems > 0)
         {
-    <span style="text-align: right; position: absolute; right: 30%;">@ViewBag.Start - @ViewBag.End items of @ViewBag.NumberOfItems</span>
+    <span style="text-align: right; position: absolute; right: 30%;">@ViewBag.Start - @ViewBag.End</span>
             <div style="text-align: right; position: absolute; right: 30%;">Page @ViewBag.Page of @ViewBag.Pages </div>
 
 
