Advanced with the PageHelper prototype

--- a/WowArmory/Views/Quests/Index.cshtml
+++ b/WowArmory/Views/Quests/Index.cshtml
@@ -10,6 +10,13 @@
     }
 </style>
 
+<p>Start: @ViewBag.Start</p>
+<p>End: @ViewBag.End</p>
+<p>Page: @ViewBag.Page</p>
+<p>Pages: @ViewBag.Pages</p>
+<p>Number of Items: @ViewBag.NumberOfItems</p>
+
+
 <table>
     <tr>
         <th>
